--- a/fig/example-compact-sbp.tex
+++ b/fig/example-compact-sbp.tex
@@ -25,7 +25,7 @@
 		& $\neg x_8 \lor \neg x_2 \lor \neg x_3 \lor x_6$\\
 		& $\neg x_8 \lor \neg x_2 \lor x_9$\\
 		& $\neg x_8 \lor x_5 \lor \neg x_3 \lor x_6$\\
-		& $\neg x_8 \lor x_5 \lor \neg x_9$\\
+		& $\neg x_8 \lor x_5 \lor x_9$\\
 
 	\end{tabular}
 \end{center}
