--- a/main.bib
+++ b/main.bib
@@ -596,3 +596,37 @@
 	year={1999},
 	publisher={IEEE}
 }
+
+@book{garey2002computers,
+	title={Computers and intractability},
+	author={Garey, Michael R and Johnson, David S},
+	volume={29},
+	year={2002},
+	publisher={wh freeman New York}
+}
+
+@article{hamadi2008manysat,
+	title={ManySAT: a parallel SAT solver},
+	author={Hamadi, Youssef and Jabbour, Said and Sais, Lakhdar},
+	journal={Journal on Satisfiability, Boolean Modeling and Computation},
+	volume={6},
+	pages={245--262},
+	year={2008}
+}
+
+@inproceedings{lewis2007multithreaded,
+	title={Multithreaded SAT solving},
+	author={Lewis, Matthew and Schubert, Tobias and Becker, Bernd},
+	booktitle={Proceedings of the 2007 Asia and South Pacific Design Automation Conference},
+	pages={926--931},
+	year={2007},
+	organization={IEEE Computer Society}
+}
+
+@article{chu2008pminisat,
+	title={Pminisat: a parallelization of minisat 2.0},
+	author={Chu, Geoffrey and Stuckey, Peter J and Harwood, Aaron},
+	journal={SAT race},
+	year={2008},
+	publisher={Citeseer}
+}
