--- a/introduction.tex
+++ b/introduction.tex
@@ -1,15 +1,15 @@
 \chapter{Introduction}\label{chap:intro}
 
 
-The interest of using computers for logic deduction and reasoning can be traced in nineteen century.
+The interest of using computers for logic deduction and reasoning can be traced in the nineteen century.
 In 1869,  William Stanley Jevons designed and built the first machine doing logic inference.
-Since the progress of computers, it is used in different domains such as design automation process 
-(logic optimization, test pattern generation, formal verification and functional simulation).
-Nowadays, one of the methods used in Boolean reasoning is the Boolean satisfiability (SAT).
+With the progress of computers, it is used in different domains such as design automation process 
+(logic optimization, test pattern generation, formal verification and functional simulation, etc).
+Nowadays, one of the methods used in Boolean reasoning is the automatic satisfiability (SAT).
 
 Given a propositional formula (generally the constraints of an encoded problem),
 SAT solving consists in deciding whether the formula is satisfiable (i.e, all constraints can be
-satisfiable) or unsatisfiable (i.e, there is no way to satisfy all constraints).
+satisfied) or unsatisfiable (i.e, there is no way to satisfy all constraints at the same time).
 This computation is made by a SAT solver that answer $\sat$ when the formula is satisfiable
 and $\unsat$ otherwise.
 
@@ -18,34 +18,34 @@ means that every NP problem can be solved by transforming it into SAT. Solving t
 polynomial time is equivalent to the P versus NP, one of the seven millennium prize problem.
 
 
-Despite this complexity, SAT solver becomes more and more powerful.
-Over the last decades, it can handle more and more complicated problems in different domains:
-like \emph{formal methods}: bounded model checking (BMC)~\cite{bmc_99}; \emph{artificial intelligence}: planning decision~\cite{planning_92}; \emph{Bioinformatics} : Haplotype inference~\cite{biology_06}.
-In a recent work, a SAT solver solved the Pythagorean triple problem, an old mathematical conjecture,
-with a proof of 200 TB~\cite{heule2016solving}.
+Despite this complexity, SAT solver are becoming more and more powerful.
+Over the last decades, these can handle more and more complicated problems in different domains:
+like \emph{formal methods} such that: bounded model checking (BMC)~\cite{bmc_99}; \emph{artificial intelligence}: planning decision~\cite{planning_92}; \emph{Bioinformatics} : Haplotype inference~\cite{biology_06}.
+In a recent work, a SAT solver could solve the Pythagorean triple problem~\cite{heule2016solving}, an old mathematical conjecture,
+with a proof of 200 TB.
 This success comes from the introduction of sophisticated heuristics and optimization of the solving 
 algorithm called Conflict Driven Clause Learning (CDCL) algorithm. It is based on the first non memory
 intensive algorithm named by its authors Davis, Putnam, Logemann, and Loveland (DPLL)~\cite{dpll_62}.
 
 
 
-Some problem have a huge search space and some instances cannot be handle.
-An example of problem can be the vehicle routing problem (VRP).
+Some problems have a huge search space and some of their instances cannot be handled.
+An example of such a problem can be the vehicle routing problem (VRP).
 It concerns the service of delivery company, in which
 given a fleet of vehicles based in a depot, they must make rounds between several customers  who have requested
 each a certain amount of goods. All clients visited by a vehicle refers to the tour of the vehicle. 
-The goal is to find the tour that minimize the delivery cost (monetary, distance, time, ...).
+The goal is to find the tour that minimizes the delivery cost (monetary, distance, time, ...).
 Finding the optimal solution for VRP problem is NP-Hard~\cite{toth2002vehicle}.
 
-On an instance of this problem, renaming the set of identical vehicle will give us exactly the same problem.
-This is called a \textit{symmetry}. In general, a symmetry is a transformation that leave an object (or some aspect of the object) unchanged. Symmetries are typically defined as a \textit{syntactical} property of a problem when its presence is inherent to the encoding of the problem. A permutation of variable preserve the original specification. In the case where the symmetries are independent of any 
+On an instance of this problem, renaming the set of identical vehicles will give us exactly the same problem.
+This is called a \textit{symmetry}. In general, a symmetry is a transformation that leaves an object (or some aspect of the object) unchanged. Symmetries are typically defined as a \textit{syntactical} property of a problem when its presence is inherent to the encoding of the problem. A permutation of variable preserves the original specification. In the case where the symmetries are independent of any 
 particular representation of the problem, it is called \textit{semantic}.
 
 
 The presence of symmetry in a problem forces the search algorithm to fruitlessly explore symmetric
-search space and greatly hinders the performance of it. \textit{Symmetry breaking} is an approach that
+search space and greatly hinders its performance. \textit{Symmetry breaking} is an approach that
 avoid the solver to visit symmetric search space. The first step to exploit symmetry is to find them.
-In context of SAT, the detection of symmetry is done by a transforming the specification
+In context of SAT, the detection of syntactical symmetry is done by a transforming the specification
 in a colored graph and then apply a graph automorphism tool.
 
 
@@ -78,14 +78,16 @@ in a colored graph and then apply a graph automorphism tool.
 
 
 
-When symmetries are found, the most common approach to exploit it is the \emph{static symmetry breaking}.
-It takes the symmetric problem as input and produces a satisfiability equivalent formula by eliminating symmetries. It is done by augmenting the problem with constraints that force solver to not explore the symmetric search  space. It is a easy to integrate static symmetry breaking in an existing workflow using SAT solver, no modification of it is necessary. In addition, this approach works well on many symmetric applications.
-However, the number and the size of added constraints increase the solving time and the solver stucks
-on some highly symmetrical problems.
+When symmetries are computed, the most common approach to exploit them is to use a \emph{static symmetry breaking} technique.
+It takes the symmetric problem as input and produces a satisfiability equivalent formula by eliminating symmetries. This is done by augmenting the problem with constraints that force the solver to not explore the symmetric search  spaces. It is a easy to integrate static symmetry breaking, no modification of the solver is necessary.
+In addition, this approach works well on many symmetric applications.
+However, some highly symmetric instances cannot be solved using this technique.
 
-Another approach to handle symmetry is \emph{dynamic symmetry breaking}. In this one, the management of
-symmetries is done during the search algorithm. It observes the behavior of the solver and help it to
-not visit symmetric search space.
+
+Another approach to handle symmetry is \emph{dynamic symmetry breaking} techniques. In this one, the management of
+symmetries is done during the search algorithm. Different approaches exist, on the first, the behavior of the solver is analyzed to avoid it to visit symmetric search space. On the other approach, some symmetrical facts are deduced from the
+state of the solver. This has the effect of accelerating the tree traversal of the solver and so the solving time.
+
 
 
 The challenge of this thesis is to understand the state of  the art approach in symmetry breaking and
@@ -166,13 +168,12 @@ improve them.
 %
 
 This thesis addresses the challenge of optimizing the solving of a SAT problem in presence of
-symmetry. In detail, my research exploits dynamic symmetry breaking.
-Understanding state-of-the-art techniques allows us to improve it.
-Two majors contributions are detailed in this thesis. The first one use the strengths of static symmetry 
-breaking and apply it dynamically to avoid its drawback. It add an opportunistic symmetry controller 
-that avoid visiting symmetric search space. This approach allows to solve very hard symmetric problems.
-The second contribution use the previous one and combines it with state of the art dynamic 
-symmetry breaking approach and take the best of 2 worlds. This combination leads to 
+symmetry. In detail, my research exploits symmetry breaking during the solving.
+%Understanding state-of-the-art techniques allows us to improve it.
+Two majors contributions are detailed in this thesis. The first one uses the strengths of static symmetry 
+breaking approach and applied it dynamically to avoid the drawbacks of the approach. It adds an opportunistic symmetry controller that avoids visiting symmetric search spaces. Benchmarks show that this approach allows to solve very hard symmetric problems.
+The second contribution uses the previous one and combines it with state-of-the-art dynamic 
+symmetry breaking approach and so takes the best of 2 worlds. This combination leads to 
 important theoretical step for the usage of \emph{partial symmetry breaking} with the usage of 
 \ emph{local symmetries}. 
  
@@ -187,25 +188,39 @@ dynamic symmetry breaking approach and Chapter 6 concludes the thesis. More prec
  
 \textbf{The Boolean Satisfiability Problem}
 
-The goal of \cref{chap:preliminaries} is to better understand what is SAT. It describes in detail
-the basics about propositional logic that will used in the rest of the manuscript. 
-It describes the original DPLL algorithm, and the nowadays used CDCL algorithm.
-Different heuristics that are embedded in modern efficient SAT sequential solvers are also explained. 
+The goal of \cref{chap:preliminaries} is to better understand what is SAT. 
+It describes in detail the basics
+about propositional logic that will be used in the rest of the manuscript. Satisfiability is a hard
+problem but some particular forms that are easy to solve such as 2-SAT, Horn SAT and Xor-SAT will be presented.
+This chapter describes also the original DPLL algorithm, and the
+nowadays used CDCL algorithm and their important points. SAT can nowadays handle
+sophisticated problems, to achieve this performance, modern efficient SAT solvers use different heuristics.
+ An overview of these will be presented. Finally, with the presence of multi
+core machines, an overview of the state-of-the-art parallel SAT solving will be presented.
+
 
 \textbf{Symmetry and SAT}
 
-The goal of \Cref{chap:symmetryinsat} is to better understand what is a symmetry. As it belong to the 
-group theory, we first explain its basics and notation that will be used in the rest of the manuscript.
-This chapter also present, the computation of the search of symmetry from a SAT problem and 
-the different existing approaches that use them to reduce the search space.
+The goal of \Cref{chap:symmetryinsat} is to better understand what is a symmetry. 
+It requires an understanding of the group theory, so we first explain its basics and the notation that will be
+ used in the rest of the manuscript.
+This chapter also presents the process to find the (syntactic) symmetries of a SAT problem.
+ This computation involves the creation of a graph from the problem and the computation of an
+automorphism tool. After obtaining the symmetries, the second part will present how to
+exploit them for reducing the search space of the solver. The two major approaches that
+are the static symmetry breaking approach and dynamic symmetry breaking approach.
+Static symmetry breaking is so far the most popular approach to take advantage of symmetries. It relies on a symmetry preprocessor which augments the initial problem with constraints that force the solver to consider only a few configurations among the many symmetric ones.
+Dynamic symmetry breaking exploits the symmetries during the computation of the SAT solver to accelerate the
+tree traversal of the SAT solver using symmetrical facts or avoids symmetric configurations like in the 
+static approach.
 
 \textbf{Between Static and Dynamic}
 
 \Cref{chap:symmSAT} describes our efficient dynamic symmetry breaking approach.
 The first part explains our algorithm, a new way to handle symmetries, that avoid the main problem
 of the current static approaches. Our proposal has been implemented in state-of-the-art
-SAT solver. The second part presents the extensive experiments on the benchmarks of last six SAT competitions,
-which shows that our approach is competitive with the best state-of-the-art static symmetry breaking solutions.
+SAT solver called $\minisat$~\cite{een2003extensible}. The second part presents the extensive experiments on the benchmarks of last six SAT competitions,
+which show that our approach is competitive with the best state-of-the-art static symmetry breaking solutions.
 The last part presents different heuristics that can improve the performance of our algorithm.
 
 
