--- a/symmetryinsat.tex
+++ b/symmetryinsat.tex
@@ -81,7 +81,7 @@ We call \emph{support} of the permutation $g$, noted $\support_{g}$, the element
 A variable $x$ is \emph{stable} by a permutation $g$ 
 iff $x \notin \support_g$.
 
-\hakan{mettre ailleurs A clause $\omega$ is \emph{stabilized} by a permutation $g$ if $\omega \cap \support_g = \emptyset$.}
+%\hakan{mettre ailleurs A clause $\omega$ is \emph{stabilized} by a permutation $g$ if $\omega \cap \support_g = \emptyset$.}
 
 A set of permutations of a given set $X$ form a group $G_X$ with the composition operation ($\circ$) and is called \emph{permutation group}.
 The \emph{symmetric group} is the set of all possible permutations of a set $X$ and noted \Group($X$).
